[gd_scene load_steps=2 format=3 uid="uid://okfsmu5lkao6"]

[ext_resource type="Script" path="res://InventoryItem.gd" id="1_mjoeb"]

[node name="Item" type="PanelContainer"]
script = ExtResource("1_mjoeb")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Name" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "ItemName"
vertical_alignment = 1

[node name="Amount" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Amount"
vertical_alignment = 1

[node name="EquipButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "< Equip"

[node name="TransferButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "^ Transfer"

[node name="DestroyButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "v Destroy"
